tests/ui/field_path_unknown_first.stderr
error: validate rule 'eq_field' references unknown field 'profile' in path 'profile.email'
 --> tests/ui/field_path_unknown_first.rs:3:17
  |
3 | #[derive(Debug, Validate)]
  |                 ^^^^^^^^
  |
  = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
